@@ -20,10 +20,10 @@ RDEPEND="
 	app-shells/ksh
 	|| (
 		(
-			x11-libs/libX11[abi_x86_32]
-			x11-libs/libXext[abi_x86_32]
+			x11-libs/libX11[abi_x86_32(-)]
+			x11-libs/libXext[abi_x86_32(-)]
 		)
-		app-emulation/emul-linux-x86-xlibs
+		app-emulation/emul-linux-x86-xlibs[-abi_x86_32(-)]
 		)"
 DEPEND=""
 
