@@ -2,6 +2,9 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  04 Jul 2014; Justin Lecher <jlec@gentoo.org> unio-2.0.3-r1.ebuild:
+  Fix emul-linux deps for modern multilib
+
 *unio-2.0.3-r1 (21 Mar 2014)
 
   21 Mar 2014; Justin Lecher <jlec@gentoo.org> +unio-2.0.3-r1.ebuild:
